Add top books section

--- a/lib/bookify_web/components/layouts/app.html.heex
+++ b/lib/bookify_web/components/layouts/app.html.heex
@@ -6,6 +6,9 @@
 		</a>
     <ul class="right hide-on-med-and-down">
       <li>
+        <%= link("Featured", to: Routes.book_path(@conn, :top_books)) %>
+      </li>
+      <li>
         <%= link("Books", to: Routes.book_path(@conn, :index)) %>
       </li>
       <li>
