add rating stars

--- a/lib/bookify_web/components/layouts/root.html.heex
+++ b/lib/bookify_web/components/layouts/root.html.heex
@@ -9,6 +9,7 @@
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
+    <link rel="icon" type="image/x-icon" href="./assets/images/icon.png ">
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
