Add books to author view

--- a/lib/bookify_web/controllers/author_html/show.html.heex
+++ b/lib/bookify_web/controllers/author_html/show.html.heex
@@ -6,3 +6,36 @@
 <br>
 <br>
 <a href={@author.wikipedia_url}>Wikipedia Page</a>
+
+<h5>
+Books:
+</h5>
+
+<ul class="collection">
+  <%= for book <- @author.books do %>
+    <li class="collection-item avatar">
+      <img src={book.cover_pic_url} alt={book.title <> " cover picture"} class="circle">
+      <span>
+        <%= link book.title, to: Routes.book_path(@conn, :show, book.id), class: "title" %>
+      </span>
+      <%= if RequireAdmin.user_is_admin?(current_user(@conn)) do %>
+        <div class="right">
+          <%= link "Edit", to: Routes.book_path(@conn, :edit, book.id) %>
+          <%= link "Delete", to: Routes.book_path(@conn, :delete, book.id), 
+          method: :delete, 
+          data: [confirm: "Are you sure?"] %>
+        </div>
+      <% end %>
+      <p>
+        <%= @author.name %>
+      </p>
+      <p>
+        Published: <%= book.publish_year %>
+      </p>
+      <p>
+        Pages: <%= book.page_count %>
+      </p>
+        <%= raw(rating_stars(book.avg_rating)) %>
+    </li>
+  <% end %>
+</ul>
