--- a/lib/bookify_web/controllers/book_html/index.html.heex
+++ b/lib/bookify_web/controllers/book_html/index.html.heex
@@ -1,5 +1,11 @@
 <h4>Books</h4>
 
+<%= form_for @conn, Routes.book_path(@conn, :index), [method: :get], fn f -> %>
+  <%= search_input f, :query, placeholder: "Search" %>
+  <%= submit "Search", class: default_btn() %>
+<% end %>
+
+
 <ul class="collection">
   <%= for book <- @books do %>
     <li class="collection-item avatar">
