Add locale switcher and store the locale in a cookie

--- a/lib/bookify_web/components/layouts/app.html.heex
+++ b/lib/bookify_web/components/layouts/app.html.heex
@@ -72,3 +72,11 @@
     <%= @inner_content %>
   </div>
 </main>
+
+<footer>
+  <%= gettext("Set language:") %>
+  <ul>
+    <li><%= locale_link("en", "English") %></li>
+    <li><%= locale_link("lv", "Latviski") %></li>
+  </ul>
+</footer>
