Make the rest localizable

--- a/lib/bookify_web/controllers/account_html/edit_password.html.heex
+++ b/lib/bookify_web/controllers/account_html/edit_password.html.heex
@@ -1,30 +1,40 @@
-<h2>Change Password</h2>
+<h2><%= gettext("Change Password") %></h2>
 
 <%= form_for @changeset, Routes.account_path(@conn, :update_password), fn f -> %>
-<div class="form-group"> 
+  <div class="form-group">
     <div class="input-field">
-        <%= password_input f, :current_password, placeholder: "Current Password", class: "form-control" %>
-        <%= error_tag f, :current_password %>
+      <%= password_input(f, :current_password,
+        placeholder: gettext("Current Password"),
+        class: "form-control"
+      ) %>
+      <%= error_tag(f, :current_password) %>
     </div>
     <div class="input-field">
-        <%= password_input f, :password, placeholder: "Password", class: "form-control" %>
-        <%= error_tag f, :password %>
-        <span class="helper-text">
-            Password format:
-            <ul>
-                <li>At least 8 characters long</li>
-                <li>At least one lower case character</li>
-                <li>At least one UPPER case character</li>
-                <li>At least one number</li>
-                <li>At least one symbol <%= safe_to_string({:safe, "(*.!@#$%^&(){}[:;<>,.?)"}) %></li>
-            </ul>
-        </span>
+      <%= password_input(f, :password, placeholder: gettext("Password"), class: "form-control") %>
+      <%= error_tag(f, :password) %>
+      <span class="helper-text">
+        <%= gettext("Password format:") %>
+        <ul>
+          <li><%= gettext("At least 8 characters long") %></li>
+          <li><%= gettext("At least one lower case character") %></li>
+          <li><%= gettext("At least one UPPER case character") %></li>
+          <li><%= gettext("At least one number") %></li>
+          <li>
+            <%= gettext("At least one symbol %{symbols}",
+              symbols: safe_to_string({:safe, "(*.!@#$%^&(){}[:;<>,.?)"})
+            ) %>
+          </li>
+        </ul>
+      </span>
     </div>
     <div class="input-field">
-        <%= password_input f, :password_confirmation, placeholder: "Confirm password", class: "form-control" %>
-        <%= error_tag f, :password_confirmation %>
+      <%= password_input(f, :password_confirmation,
+        placeholder: gettext("Confirm password"),
+        class: "form-control"
+      ) %>
+      <%= error_tag(f, :password_confirmation) %>
     </div>
-    <%= submit "Change Password", class: default_btn() %>
-    <%= link "Cancel", to: Routes.account_path(@conn, :index), class: cancel_btn() %>
-</div>
+    <%= submit(gettext("Change Password"), class: default_btn()) %>
+    <%= link("Cancel", to: Routes.account_path(@conn, :index), class: cancel_btn()) %>
+  </div>
 <% end %>
