--- a/lib/bookify_web/controllers/account_html/index.html.heex
+++ b/lib/bookify_web/controllers/account_html/index.html.heex
@@ -1,12 +1,18 @@
 <%= if @conn.assigns[:current_user] do %>
-  <h4>Hi, <%= @current_user.name %></h4>
+  <h4><%= gettext("Hi, %{name}", name: @current_user.name) %></h4>
   <%= if @current_user.avatar do %>
-  <div class="row">
-    <div class="col s3">
-      <img class="circle" src={@current_user_pic}>
+    <div class="row">
+      <div class="col s3">
+        <img class="circle" src={@current_user_pic} />
+      </div>
     </div>
-  </div>
-<% end %>
-  <%= link "Edit Profile", to: Routes.account_path(@conn, :edit_profile), class: default_btn() %>
-  <%= link "Change Password", to: Routes.account_path(@conn, :edit_password), class: default_btn() %>
+  <% end %>
+  <%= link(gettext("Edit Profile"),
+    to: Routes.account_path(@conn, :edit_profile),
+    class: default_btn()
+  ) %>
+  <%= link(gettext("Change Password"),
+    to: Routes.account_path(@conn, :edit_password),
+    class: default_btn()
+  ) %>
 <% end %>
