--- a/lib/bookify_web/controllers/book_html/edit.html.heex
+++ b/lib/bookify_web/controllers/book_html/edit.html.heex
@@ -1,37 +1,43 @@
 <%= form_for @changeset, Routes.book_path(@conn, :update, @book.id), fn f -> %>
   <div class="form-group">
     <div class="input-field">
-      <%= text_input f, :title, placeholder: "Title", class: "form-control" %>
-      <%= error_tag f, :title %>
+      <%= text_input(f, :title, placeholder: gettext("Title"), class: "form-control") %>
+      <%= error_tag(f, :title) %>
     </div>
     <div class="input-field">
-      <%= select f, :author_id, Enum.map(@authors, &{&1.name, &1.id}), class: "form-select" %>
-      <%= error_tag f, :author_id %>
+      <%= select(f, :author_id, Enum.map(@authors, &{&1.name, &1.id}), class: "form-select") %>
+      <%= error_tag(f, :author_id) %>
     </div>
     <div class="input-field">
-      <%= number_input f, :publish_year, placeholder: "Year Published", class: "form-control" %>
-      <%= error_tag f, :publish_year %>
+      <%= number_input(f, :publish_year,
+        placeholder: gettext("Year Published"),
+        class: "form-control"
+      ) %>
+      <%= error_tag(f, :publish_year) %>
     </div>
     <div class="input-field">
-      <%= number_input f, :page_count, placeholder: "Page Count", class: "form-control" %>
-      <%= error_tag f, :page_count %>
+      <%= number_input(f, :page_count, placeholder: gettext("Page Count"), class: "form-control") %>
+      <%= error_tag(f, :page_count) %>
     </div>
     <div class="input-field">
-      <%= text_input f, :genre, placeholder: "Genre", class: "form-control" %>
-      <%= error_tag f, :genre %>
+      <%= text_input(f, :genre, placeholder: gettext("Genre"), class: "form-control") %>
+      <%= error_tag(f, :genre) %>
       <span class="helper-text">
-        Format: Detective, Drama, Crime, ...
+        <%= gettext("Format: Detective, Drama, Crime, …") %>
       </span>
     </div>
     <div class="input-field">
-      <%= text_input f, :cover_pic_url, placeholder: "Cover picture URL", class: "form-control" %>
-      <%= error_tag f, :cover_pic_url %>
+      <%= text_input(f, :cover_pic_url,
+        placeholder: gettext("Cover picture URL"),
+        class: "form-control"
+      ) %>
+      <%= error_tag(f, :cover_pic_url) %>
     </div>
     <div class="input-field">
-      <%= text_input f, :anotation, placeholder: "Anotation", class: "form-control" %>
-      <%= error_tag f, :anotation %>
+      <%= text_input(f, :anotation, placeholder: gettext("Annotation"), class: "form-control") %>
+      <%= error_tag(f, :anotation) %>
     </div>
   </div>
 
-  <%= submit "Save Book", class: default_btn() %>
+  <%= submit(gettext("Save Book"), class: default_btn()) %>
 <% end %>
