--- a/lib/bookify_web/controllers/account_html/edit_profile.html.heex
+++ b/lib/bookify_web/controllers/account_html/edit_profile.html.heex
@@ -1,44 +1,44 @@
-<h2>Edit Profile</h2>
+<h2><%= gettext("Edit Profile") %></h2>
 
 <%= if @current_user.avatar do %>
   <div class="row">
     <div class="col s3">
-      <img class="circle" src={@current_user_pic}>
+      <img class="circle" src={@current_user_pic} />
     </div>
   </div>
 <% end %>
 
-<div class="form-group"> 
-    <%= form_for @changeset, Routes.account_path(@conn, :update_profile), fn f -> %>
-        <div class="input-field">
-            <%= text_input f, :name, placeholder: "Name", class: "white gray-text" %>
-            <%= error_tag f, :name %>
-        </div>
-        <div class="input-field">
-            <%= text_input f, :email, placeholder: "Email", class: "form-control" %>
-            <%= error_tag f, :email %>
-        </div>
-        <%= submit "Save Changes", class: default_btn() %>
-    <% end %>
+<div class="form-group">
+  <%= form_for @changeset, Routes.account_path(@conn, :update_profile), fn f -> %>
+    <div class="input-field">
+      <%= text_input(f, :name, placeholder: gettext("Name"), class: "white gray-text") %>
+      <%= error_tag(f, :name) %>
+    </div>
+    <div class="input-field">
+      <%= text_input(f, :email, placeholder: gettext("Email"), class: "form-control") %>
+      <%= error_tag(f, :email) %>
+    </div>
+    <%= submit(gettext("Save Changes"), class: default_btn()) %>
+  <% end %>
 </div>
 
-<h4>Change Avatar</h4>
+<h4><%= gettext("Change Avatar") %></h4>
 
 <%= form_for @avatar_changeset, Routes.account_path(@conn, :update_avatar), [multipart: true], fn f -> %>
   <%= if @avatar_changeset.action do %>
     <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+      <p><%= gettext("Oops, something went wrong! Please check the errors below.") %></p>
     </div>
   <% end %>
 
   <div class="form-group">
-    <%= file_input f, :avatar %>
-    <%= error_tag f, :avatar %>
+    <%= file_input(f, :avatar) %>
+    <%= error_tag(f, :avatar) %>
   </div>
 
   <div>
-    <%= submit "Upload avatar", class: default_btn() %>
+    <%= submit(gettext("Upload avatar"), class: default_btn()) %>
   </div>
 <% end %>
-<br>
-<%= link "Cancel", to: Routes.account_path(@conn, :index), class: cancel_btn() %>
+<br />
+<%= link(gettext("Cancel"), to: Routes.account_path(@conn, :index), class: cancel_btn()) %>
