--- a/lib/bookify_web/controllers/auth_html/new.html.heex
+++ b/lib/bookify_web/controllers/auth_html/new.html.heex
@@ -1,16 +1,16 @@
-<h2>Sign In</h2>
+<h2><%= gettext("Sign In") %></h2>
 
 <%= form_for @conn, Routes.auth_path(@conn, :signin), [as: :session], fn f -> %>
-  <div class="form-group"> 
+  <div class="form-group">
     <div class="input-field">
-      <%= text_input f, :email, placeholder: "Email", class: "form-control" %>
-      <%= error_tag f, :email %>
+      <%= text_input(f, :email, placeholder: gettext("Email"), class: "form-control") %>
+      <%= error_tag(f, :email) %>
     </div>
     <div class="input-field">
-      <%= password_input f, :password, placeholder: "Password", class: "form-control" %>
-      <%= error_tag f, :password %>
+      <%= password_input(f, :password, placeholder: gettext("Password"), class: "form-control") %>
+      <%= error_tag(f, :password) %>
     </div>
-    <%= submit "Sign In", class: default_btn() %>
+    <%= submit(gettext("Sign In"), class: default_btn()) %>
   </div>
 <% end %>
-<%= link "Register an Account", to: Routes.user_path(@conn, :new) %>
+<%= link(gettext("Register an Account"), to: Routes.user_path(@conn, :new)) %>
