--- a/lib/bookify_web/controllers/book_html/show.html.heex
+++ b/lib/bookify_web/controllers/book_html/show.html.heex
@@ -1,146 +1,166 @@
-<img src={@book.cover_pic_url}>
+<img src={@book.cover_pic_url} />
 <%= @book.title %>
-<br>
-Author: <%= link @book.author.name, to: Routes.author_path(@conn, :show, @book.author.id) %>
-<br>
-Year: <%= @book.publish_year %>
-<br>
-Pages: <%= @book.page_count %>
-<br>
-Genres:
-<%= if @book.genre == nil, do: '', else: Enum.join(@book.genre, ", ") %>
-<br>
- <%= if @book.avg_rating, do: raw(rating_stars(@book.avg_rating)) %> 
+<br />
+<%= gettext("Author:") %> <%= link(@book.author.name,
+  to: Routes.author_path(@conn, :show, @book.author.id)
+) %>
+<br />
+<%= gettext("Year:") %> <%= @book.publish_year %>
+<br />
+<%= gettext("Pages:") %> <%= @book.page_count %>
+<br />
+<%= gettext("Genres:") %> <%= if @book.genre == nil, do: '', else: Enum.join(@book.genre, ", ") %>
+<br />
+<%= if @book.avg_rating, do: raw(rating_stars(@book.avg_rating)) %>
 <h5>
-Description:
+  <%= gettext("Description:") %>
 </h5>
-<p> <%= @book.anotation %> </p>
+<p><%= @book.anotation %></p>
 
 <%= if @conn.assigns[:current_user] do %>
   <%= if Lists.book_in_list?(
-    current_user(@conn).id, 
+    current_user(@conn).id,
     want_to_read_list_type(),
     @book.id
     ) do %>
-    <%= link "Remove from wishlist",
-    to: Routes.list_path(@conn, :remove_book_from_list, want_to_read_list_type(), @book.id),
-    class: cancel_btn() %>
+    <%= link(gettext("Remove from wishlist"),
+      to: Routes.list_path(@conn, :remove_book_from_list, want_to_read_list_type(), @book.id),
+      class: cancel_btn()
+    ) %>
   <% else %>
-    <%= link "Want to Read",
-    to: Routes.list_path(@conn, :add_book_to_list, want_to_read_list_type(), @book.id),
-    class: default_btn() %>
+    <%= link(gettext("Want to Read"),
+      to: Routes.list_path(@conn, :add_book_to_list, want_to_read_list_type(), @book.id),
+      class: default_btn()
+    ) %>
   <% end %>
 
   <%= if Lists.book_in_list?(
-    current_user(@conn).id, 
+    current_user(@conn).id,
     reading_list_type(),
     @book.id
     ) do %>
-    <%= link "Remove from Reading",
-    to: Routes.list_path(@conn, :remove_book_from_list, reading_list_type(), @book.id),
-    class: cancel_btn() %>
+    <%= link(gettext("Remove from Reading"),
+      to: Routes.list_path(@conn, :remove_book_from_list, reading_list_type(), @book.id),
+      class: cancel_btn()
+    ) %>
   <% else %>
-    <%= link "Reading",
-    to: Routes.list_path(@conn, :add_book_to_list, reading_list_type(), @book.id),
-    class: default_btn() %>
+    <%= link(gettext("Reading"),
+      to: Routes.list_path(@conn, :add_book_to_list, reading_list_type(), @book.id),
+      class: default_btn()
+    ) %>
   <% end %>
 
   <%= if Lists.book_in_list?(
-    current_user(@conn).id, 
+    current_user(@conn).id,
     has_read_list_type(),
     @book.id
     ) do %>
-    <%= link "Remove from Have Read",
-    to: Routes.list_path(@conn, :remove_book_from_list, has_read_list_type(), @book.id),
-    class: cancel_btn() %>
+    <%= link(gettext("Remove from Have Read"),
+      to: Routes.list_path(@conn, :remove_book_from_list, has_read_list_type(), @book.id),
+      class: cancel_btn()
+    ) %>
   <% else %>
-    <%= link "Have Read",
-    to: Routes.list_path(@conn, :add_book_to_list, has_read_list_type(), @book.id),
-    class: default_btn() %>
+    <%= link(gettext("Have Read"),
+      to: Routes.list_path(@conn, :add_book_to_list, has_read_list_type(), @book.id),
+      class: default_btn()
+    ) %>
   <% end %>
-
 
   <%!-- WRITE REVIEW MODAL --%>
   <!-- Modal Trigger -->
-  <a class={"modal-trigger " <> review_btn() } href="#write-review">Write a Review</a>
+  <a class={"modal-trigger " <> review_btn() } href="#write-review">
+    <%= gettext("Write a Review") %>
+  </a>
 
   <div id="write-review" class="modal">
     <div class="modal-content">
       <h4>
-        Review for <%= @book.title %>
+        <%= gettext("Review for %{title}", title: @book.title) %>
       </h4>
-      <div class="form-group"> 
+      <div class="form-group">
         <%= form_for @review_changeset, Routes.review_path(@conn, :create, @book.id), fn f -> %>
           <div class="input-field">
-            <%= text_input f, :title, placeholder: "Title", class: "white gray-text" %>
-            <%= error_tag f, :title %>
+            <%= text_input(f, :title, placeholder: gettext("Title"), class: "white gray-text") %>
+            <%= error_tag(f, :title) %>
           </div>
           <div class="input-field">
-            <%= text_input f, :review, placeholder: "Review", class: "white gray-text" %>
-            <%= error_tag f, :review %>
+            <%= text_input(f, :review, placeholder: gettext("Review"), class: "white gray-text") %>
+            <%= error_tag(f, :review) %>
           </div>
           <div class="input-field">
-            <%= number_input f, :rating, step: 0.1, placeholder: "Rating", class: "white gray-text" %>
-            <%= error_tag f, :rating %>
+            <%= number_input(f, :rating,
+              step: 0.1,
+              placeholder: gettext("Rating"),
+              class: "white gray-text"
+            ) %>
+            <%= error_tag(f, :rating) %>
           </div>
           <span class="helper-text">
-            Rating format: 1 - 5
+            <%= gettext("Rating format: 1 - 5") %>
           </span>
-            <%= submit "Post Review", class: default_btn() <> " right" %>
+          <%= submit(gettext("Post Review"), class: default_btn() <> " right") %>
         <% end %>
       </div>
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">
+        <%= gettext("Cancel") %>
+      </a>
     </div>
   </div>
-
-
 <% else %>
   <%!-- NOT LOGGED IN MODAL FOR LOGIN --%>
   <!-- Modal Trigger -->
-  <a class={"modal-trigger " <> review_btn() } href="#sign-in">Write a Review</a>
-
+  <a class={"modal-trigger " <> review_btn() } href="#sign-in">
+    <%= gettext("Write a Review") %>
+  </a>
   <!-- Modal Structure -->
   <div id="sign-in" class="modal">
     <div class="modal-content">
       <h4>
-      You have to be signed in to write a review      
+        <%= gettext("You have to be signed in to write a review") %>
       </h4>
-      <%= link "Sign In",
-      to: Routes.auth_path(@conn, :new),
-      class: default_btn() %>
+      <%= link(gettext("Sign In"),
+        to: Routes.auth_path(@conn, :new),
+        class: default_btn()
+      ) %>
 
-      <%= link "Register",
-      to: Routes.user_path(@conn, :new),
-      class: default_btn() %>
+      <%= link(gettext("Register"),
+        to: Routes.user_path(@conn, :new),
+        class: default_btn()
+      ) %>
 
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat right">Close</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat right">
+        <%= gettext("Close") %>
+      </a>
     </div>
   </div>
-
 <% end %>
 
 <%!-- Reviews --%>
 
 <h4>
-  Reviews
+  <%= gettext("Reviews") %>
 </h4>
 
 <%= if @book.reviews == [] do %>
-  <p>No reviews yet</p>
+  <p><%= gettext("No reviews yet") %></p>
 <% end %>
 
 <ul class="collection">
   <%= for review <- @book.reviews do %>
     <%= if review.approved do %>
       <li class="collection-item avatar">
-        <img src={Bookify.Avatar.url({review.user.avatar, review.user}, signed: true)} alt={review.user.name <> " profile picture"} class="circle">
+        <img
+          src={Bookify.Avatar.url({review.user.avatar, review.user}, signed: true)}
+          alt={gettext("%{name} profile picture", name: review.user.name)}
+          class="circle"
+        />
         <p class="right">
           <%= from_now(review.inserted_at) %>
-          <br>
+          <br />
           <%= display_date(review.inserted_at) %>
-          <br>
+          <br />
           <%= display_time(review.inserted_at) %>
         </p>
         <h6>
@@ -155,13 +175,16 @@ Description:
         <p>
           <%= raw(rating_stars(review.rating)) %>
         </p>
-        <br>
+        <br />
         <%= if @conn.assigns[:current_user] do %>
           <%= if current_user(@conn).id == review.user_id do %>
-            <%= link "Delete", to: Routes.review_path(@conn, :delete, @book.id, review.id), 
-            method: :delete, 
-            data: [confirm: "Are you sure?"], class: "right" %>
-            <br>
+            <%= link(gettext("Delete"),
+              to: Routes.review_path(@conn, :delete, @book.id, review.id),
+              method: :delete,
+              data: [confirm: gettext("Are you sure?")],
+              class: "right"
+            ) %>
+            <br />
           <% end %>
         <% end %>
       </li>
@@ -170,12 +193,3 @@ Description:
 </ul>
 
 <%!-- Reviews End --%>
-
-
-
-
- 
-  
-
-
-
