--- a/lib/bookify_web/controllers/list_html/show.html.heex
+++ b/lib/bookify_web/controllers/list_html/show.html.heex
@@ -1,17 +1,16 @@
 <%!-- <img src={@book.cover_pic_url}>
 <%= @book.title %>
 <br>
-Author: <%= link @book.author.name, to: Routes.author_path(@conn, :show, @book.author.id) %>
+<%= gettext("Author:") %> <%= link @book.author.name, to: Routes.author_path(@conn, :show, @book.author.id) %>
 <br>
-Year: <%= @book.publish_year %>
+<%= gettext("Year:") %> <%= @book.publish_year %>
 <br>
-Pages: <%= @book.page_count %>
+<%= gettext("Pages:") %> <%= @book.page_count %>
 <br>
-Genres:
+<%= gettext("Genres:") %>
 <%= if @book.genre == nil, do: '', else: Enum.join(@book.genre, ", ") %>
 <br>
 <h5>
-Description:
+<%= gettext("Description:") %>
 </h5>
 <p> <%= @book.anotation %> </p> --%>
-
