Fix issue with localization

--- a/lib/bookify_web/controllers/admin_html/reviews.html.heex
+++ b/lib/bookify_web/controllers/admin_html/reviews.html.heex
@@ -7,7 +7,7 @@
         class="circle"
       />
       <h6>
-        <%= link(gettext("For: %{title}", review.book.title),
+        <%= link(gettext("For: %{title}", title: review.book.title),
           to: Routes.book_path(@conn, :show, review.book.id)
         ) %>
       </h6>
